Fixed bug where the recent emojis were not mapped correctly with the index